# Trading_strategies

./: .gitignore  README.md  conda.md  docker-compose.yaml  requirements.txt
.github/workflows/: github-actions.yml
app/: database.py  login.py  main.py  models.py  schemas.py
data_filler/: data_filler.dockerfile  pyproject.toml
data_filler/app/: bitcoin_socket.py  config.py  crud.py  db.py  main.py  routes.py  sp500_socket.py  telegram_messaging.py  transactionMaker.py
data_filler/app/alembic/: env.py
data_filler/app/alembic/versions/: 50f87307c365_add_btc_timestampdata.py
database/: docker-compose.yaml  steps.md
elk/elasticsearch/: elastic_config.yml
elk/kibana/: kibana_config.yml
info_server/: main.py
learning_notes/: docker.md  fastapi_docs.py  linux.md  psql_docker.md  steps.md  vscode_sorrtcuts.md
models/: LSTM.py  LSTM_Pytorch.py  btc_timestampdata.csv  model.pth  pyproject.toml  search.ipynb
nginx/: docker-compose.yaml
prometheus_and_grafana/: prometheus.yml
prometheus_and_grafana/grafana_storage/: grafana.db
rabbitmq/: flower.dockerfile  wait_for_worker_l_flower.sh
rabbitmq/mnesia/rabbit@5b3b414087d6/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCL  rabbit_runtime_parameters.DCL  rabbit_user.DCL  rabbit_user_permission.DCL  rabbit_vhost.DCL
rabbitmq/mnesia/rabbit@ed5e567cd3d4/: cluster_nodes.config  nodes_running_at_shutdown
services_and_queue/: celery.dockerfile  celery.py  telegram_messaging.py  worker-start.sh
transaction_maker/app/: bitcoin_socket.py  crud.py  models.py
(+22 files in other folders)
