[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["Anton"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
tensorflow = "^2.17.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
